--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/risotto"]
 	path = themes/risotto
 	url = git@github.com:joeroe/risotto.git
+[submodule "themes/buckwheat"]
+	path = themes/buckwheat
+	url = https://github.com/1ort/buckwheat.git
