--- a/hugo.toml
+++ b/hugo.toml
@@ -41,7 +41,7 @@ url = "mailto:orthodox@nigge.rs"
 [[params.socialLinks]]
 icon = "fa-brands fa-telegram"
 title = "Telegram"
-url = "https://lochnesser.t.me"
+url = "https://jadufan.t.me"
 
 [menu]
   [[menu.main]]
